--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,8 +29,14 @@ jobs:
       - name: install deps
         run: sudo apt -y install build-essential
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Git Clone Action
+        # You may pin to the exact commit or the version.
+        # uses: sudosubin/git-clone-action@8a93ce24d47782e30077508cccacf8a05a891bae
+        uses: sudosubin/git-clone-action@v1.0.1
+        with:
+          # Repository owner and name. Ex: sudosubin/git-clone-action
+          repository: pymumu/smartdns
+          path: smartdns
+          
+      - name: compile
+        run: cd smartdns && sh ./package/build-pkg.sh --platform linux --arch x86_64 --static
