--- a/smartdns.conf
+++ b/smartdns.conf
@@ -10,7 +10,7 @@ cache-file /etc/smartdns/smartdns.cache
 prefetch-domain yes
 
 #日志等级
-log-level 
+log-level info
 #日志位置
 log-file /var/log/smartdns.log
 # ----- Default Group -----
