--- a/smartdns.conf
+++ b/smartdns.conf
@@ -1,10 +1,10 @@
 speed-check-mode none
 bind [::]:53
 #缓存大小
-cache-size 128k
+cache-size 65535
 #缓存持久化
 cache-persist yes
-cache-file /etc/smartdns/smartdns.cache
+cache-file /var/cache/smartdns/smartdns.cache
 
 #缓存预获取
 prefetch-domain yes
@@ -21,7 +21,12 @@ server-tcp 208.67.220.220:443
 server-https https://146.112.41.2/dns-query
 # TWNIC 的 IP DoH
 server-https https://101.101.101.101/dns-query
-# 你也可以配置其它 DNS 作为上游
+# Cloudflare
+server-tls 1.1.1.1:853
+server-tls 1.0.0.1:853
+# Google
+server-tls 8.8.8.8:853
+server-tls 8.8.4.4:853
 
 # ----- Domestic Group: domestic -----
 # 仅用于解析 dnsmasq-china-list 列表中的域名
