--- a/smartdns.conf
+++ b/smartdns.conf
@@ -42,5 +42,5 @@ server-tcp 114.114.115.115 -group domestic -exclude-default-group
 # CNNIC 公共 DNS、仅支持 UDP 查询
 server 1.2.4.8 -group domestic -exclude-default-group
 server 210.2.4.8 -group domestic -exclude-default-group
-conf-file /etc/smartdns/accelerated-domains.china.domain.smartdns.conf
-conf-file /etc/smartdns/apple.china.domain.smartdns.conf
+conf-file /etc/smartdns/china.conf
+conf-file /etc/smartdns/apple.conf
