--- a/.github/workflows/chinadns.yml
+++ b/.github/workflows/chinadns.yml
@@ -33,9 +33,13 @@ jobs:
       - name: generate smartdns
         run: cd dnsmasq-china-list && make SERVER=domestic SMARTDNS_SPEEDTEST_MODE=tcp:80 smartdns-domain-rules
       - name: copy conf files to master
-        run: cp dnsmasq-china-list/accelerated-domains.china.domain.smartdns.conf dnsmasq-china-list/apple.china.domain.smartdns.conf .
+        run: cp dnsmasq-china-list/accelerated-domains.china.domain.smartdns.conf china.conf && cp dnsmasq-china-list/apple.china.domain.smartdns.conf apple.conf
       - name: delete dep repo
         run: rm -r dnsmasq-china-list
+      - name: append nexitally domains
+        run: curl {{nexitally.subscribe_url}} |grep -v Premium|awk -F ',' '{gsub(/ /,"",$2)gsub(/ /,"",$3);printf "domain-rules /%s/ -speed-check-mode tcp:%s -nameserver domestic\n",$2,$3}'|sort|uniq >> nexitally.conf
+      - name: append flower domains
+        run: curl {{flower.subscribe_url}} |grep -v Premium|awk -F ',' '{gsub(/ /,"",$2)gsub(/ /,"",$3);printf "domain-rules /%s/ -speed-check-mode tcp:%s -nameserver domestic\n",$2,$3}'|sort|uniq >> flower.conf
       - name: Git Commit and Push
         # You may pin to the exact commit or the version.
         # uses: github-actions-x/commit@722d56b8968bf00ced78407bbe2ead81062d8baa
