--- a/smartdns.conf
+++ b/smartdns.conf
@@ -44,3 +44,5 @@ server 1.2.4.8 -group domestic -exclude-default-group
 server 210.2.4.8 -group domestic -exclude-default-group
 conf-file /etc/smartdns/china.conf
 conf-file /etc/smartdns/apple.conf
+conf-file /etc/smartdns/nexitally.conf
+conf-file /etc/smartdns/flower.conf
