--- a/.github/workflows/chinadns.yml
+++ b/.github/workflows/chinadns.yml
@@ -39,8 +39,7 @@ jobs:
       - name: append nexitally domains
         run: sh script/converter.sh ${{secrets.NEXITALLY}}
       - name: append flower domains
-        run: |
-          curl ${{secrets.FLOWER}} |grep -v Premium|awk -F ',' '{gsub(/ /,"",$2)gsub(/ /,"",$3);printf "domain-rules /%s/ -speed-check-mode tcp:%s -nameserver domestic\n",$2,$3}'|sort|uniq >> flower.conf
+        run: sh script/converter.sh ${{secrets.FLOWER}}
       - name: Git Commit and Push
         # You may pin to the exact commit or the version.
         # uses: github-actions-x/commit@722d56b8968bf00ced78407bbe2ead81062d8baa
