--- a/.github/workflows/chinadns.yml
+++ b/.github/workflows/chinadns.yml
@@ -37,7 +37,7 @@ jobs:
       - name: delete dep repo
         run: rm -r dnsmasq-china-list
       - name: append nexitally domains
-        run: curl 'https://baidu.com/test?test=a'
+        run: curl ${{secrets.NEXITALLY}}
       - name: append nexitally domains
         run: sh script/converter.sh '${{secrets.NEXITALLY}}'
       - name: append flower domains
