--- a/smartdns.conf
+++ b/smartdns.conf
@@ -13,6 +13,8 @@ prefetch-domain yes
 log-level info
 #日志位置
 log-file /var/log/smartdns.log
+#禁用ipv6
+force-AAAA-SOA yes
 # ----- Default Group -----
 # 默认使用的上游 DNS 组
 # OpenDNS 非常规 443 端口、支持 TCP 查询
