--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,38 +19,26 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      - name: Git Clone Action
-        # You may pin to the exact commit or the version.
-        # uses: sudosubin/git-clone-action@8a93ce24d47782e30077508cccacf8a05a891bae
-        uses: sudosubin/git-clone-action@v1.0.1
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          # Repository owner and name. Ex: sudosubin/git-clone-action
-          repository: felixonmars/dnsmasq-china-list
-          path: dnsmasq-china-list
-      - name: generate smartdns
-        run: cd dnsmasq-china-list && make SERVER=domestic SMARTDNS_SPEEDTEST_MODE=tcp:80 smartdns-domain-rules
-      - name: copy conf files to master
-        run: cp dnsmasq-china-list/accelerated-domains.china.domain.smartdns.conf china.conf && cp dnsmasq-china-list/apple.china.domain.smartdns.conf apple.conf
-      - name: delete dep repo
-        run: rm -r dnsmasq-china-list
-      - name: append nexitally domains
-        run: curl {{NEXITALLY}} |grep -v Premium|awk -F ',' '{gsub(/ /,"",$2)gsub(/ /,"",$3);printf "domain-rules /%s/ -speed-check-mode tcp:%s -nameserver domestic\n",$2,$3}'|sort|uniq >> nexitally.conf
-      - name: append flower domains
-        run: curl {{FLOWER}} |grep -v Premium|awk -F ',' '{gsub(/ /,"",$2)gsub(/ /,"",$3);printf "domain-rules /%s/ -speed-check-mode tcp:%s -nameserver domestic\n",$2,$3}'|sort|uniq >> flower.conf
-      - name: Git Commit and Push
-        # You may pin to the exact commit or the version.
-        # uses: github-actions-x/commit@722d56b8968bf00ced78407bbe2ead81062d8baa
-        uses: github-actions-x/commit@v2.9
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
         with:
-          # Github Token with commit access
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          # Override branch to push to
-          push-branch: master
-          # Specify commit message
-          commit-message: auto update
-          email: admin@wkz.io
-          # Committer name. Default is name of the person or app that initiated the workflow.
-          name: wangkezun
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: wangkezun/smartdns:latest
