--- a/smartdns.conf
+++ b/smartdns.conf
@@ -50,4 +50,5 @@ conf-file /etc/smartdns/china.conf
 conf-file /etc/smartdns/apple.conf
 conf-file /etc/smartdns/nexitally.conf
 conf-file /etc/smartdns/flower.conf
+conf-file /etc/smartdns/custom.conf
 conf-file /etc/smartdns/anti-ad-smartdns.conf
