--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -25,6 +25,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: install deps
         run: sudo apt -y install build-essential
+      - name: create release file
+        run: mkdir release
 
       - name: Git Clone Action
         # You may pin to the exact commit or the version.
@@ -34,35 +36,66 @@ jobs:
           # Repository owner and name. Ex: sudosubin/git-clone-action
           repository: pymumu/smartdns
           path: smartdns
-          
+
       - name: compile
         run: cd smartdns && sh ./package/build-pkg.sh --platform linux --arch x86_64 --static
-        
+
       - name: copy target
-        run: cd smartdns/package && cp `ls -SF *.gz` ../../smartdns.x86_64.tar.gz
-        
+        run: cd smartdns/package && cp `ls -SF *.gz` ../../release/smartdns.x86_64.tar.gz
+
       - name: delete dep repo
         run: rm -r smartdns
-      
-      - name: Git Commit and Push
+      # generate files 
+      - name: Git Clone Action
         # You may pin to the exact commit or the version.
-        # uses: github-actions-x/commit@722d56b8968bf00ced78407bbe2ead81062d8baa
-        uses: github-actions-x/commit@v2.9
+        # uses: sudosubin/git-clone-action@8a93ce24d47782e30077508cccacf8a05a891bae
+        uses: sudosubin/git-clone-action@v1.0.1
         with:
-          # Github Token with commit access
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          # Override branch to push to
-          push-branch: master
-          # Specify commit message
-          commit-message: auto update
-          email: admin@wkz.io
-          # Committer name. Default is name of the person or app that initiated the workflow.
-          name: wangkezun
+          # Repository owner and name. Ex: sudosubin/git-clone-action
+          repository: felixonmars/dnsmasq-china-list
+          path: dnsmasq-china-list
+      
+      - name: generate smartdns
+        run: cd dnsmasq-china-list && make SERVER=domestic SMARTDNS_SPEEDTEST_MODE=tcp:80 smartdns-domain-rules
+      
+      - name: copy conf files to master
+        run: cp dnsmasq-china-list/accelerated-domains.china.domain.smartdns.conf release/china.conf && cp dnsmasq-china-list/apple.china.domain.smartdns.conf release/apple.conf
+      
+      - name: delete dep repo
+        run: rm -r dnsmasq-china-list
+      
+      - name: append nexitally domains
+        run: sh script/converter.sh '${{secrets.NEXITALLY}}' release/nexitally.conf
+      
+      - name: append flower domains
+        run: sh script/converter.sh '${{secrets.FLOWER}}' release/flower.conf
+      
+      # docker build and release
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPONAME }}:latest
+
       - name: Release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: smartdns.x86_64.tar.gz
-          asset_name: smartdns.x86_64.tar.gz
-          tag: ${{ github.ref }}
+          file: release/*
+          tag: release
           overwrite: true
