--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,9 @@ jobs:
 
       - name: copy target
         run: cd smartdns/package && cp `ls -SF *x86_64*.gz` ../../release/smartdns.x86_64.tar.gz
+      
+      - name: ls
+        run: ls -l smartdns/package
 
       - name: delete dep repo
         run: rm -r smartdns
