--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,10 @@ jobs:
         run: cd smartdns && sh ./package/build-pkg.sh --platform linux --arch arm64 --static
 
       - name: copy target
-        run: cd smartdns/package && cp `ls -SF *x86_64*.gz` ../../release/smartdns.x86_64.tar.gz
-      
+        run: cd smartdns/package && cp `ls -SF *x86_64*.gz` ../../release/linux/smartdns.x86_64.tar.gz
+      - name: copy target
+        run: cd smartdns/package && cp `ls -SF *arm64*.gz` ../../release/smartdns.arm64.tar.gz
+    
       - name: ls
         run: ls -l smartdns/package
 
@@ -102,7 +104,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: release/*
+          file: release/**/*
           tag: release
           overwrite: true
           file_glob: true
