--- a/smartdns.conf
+++ b/smartdns.conf
@@ -44,8 +44,9 @@ server-tcp 114.114.115.115 -group domestic -exclude-default-group
 # CNNIC 公共 DNS、仅支持 UDP 查询
 server 1.2.4.8 -group domestic -exclude-default-group
 server 210.2.4.8 -group domestic -exclude-default-group
-domain-set -name microsoft -file /etc/smartdns/microsoft.list
-domain-rules /domain-set:microsoft/ -speed-check-mode tcp:80 -nameserver domestic
+domain-set -name custom-china -file /etc/smartdns/microsoft.list
+domain-set -name custom-china -file /etc/smartdns/blizzard-cdn.list
+domain-rules /domain-set:custom-china/ -speed-check-mode tcp:80 -nameserver domestic
 conf-file /etc/smartdns/china.conf
 conf-file /etc/smartdns/apple.conf
 conf-file /etc/smartdns/nexitally.conf
